已基本实现内部ReAct的响应式， 后面需要考虑记录耗时问题， 数据库清洗、 测试问题、这部分才是知识库的重点